<resources>
    <string name="app_name">DLock</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_witness">Witness</string>

    <string name="cancel">Cancel</string>

    <string name="unlock">Unlock</string>
    <string name="send_sms">Send message</string>
    <string name="call">Call</string>
    <string name="siren">Play Siren</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email_username">Email/Username</string>

    <string name="start_now">Start Using the App</string>

    <string name="add_contact">Add Contact</string>
    <string name="add_edit_contact">Add / Edit Contact</string>
    <string name="edit_contact">Edit Contact</string>

    <string name="directory">Directory</string>

    <string name="police_stations">Police Stations</string>
    <string name="fire_stations">Fire Stations</string>
    <string name="hospitals">Hospitals</string>

    <string name="lock_screen_status">Lock Screen Status</string>
    <string name="enable_lock">Enable LockScreen</string>
    <string name="enable_message">You can now enable the safe lock screen. Enable it in Settings screen.</string>

    <string name="confirm_contact">Confirm Contact</string>

    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="text_progress_login">Logging you in&#8230;</string>
    <string name="text_progress_signup">Signing you up&#8230;</string>
    <string name="text_progress_saving">Saving changes&#8230;</string>

    <string name="logging_out">Logging out</string>

    <string name="connect_wireless">Please connect to a wireless connection&#8230;</string>

    <!-- Common clack screen -->
    <string name="location_failed_error">Failed to get current location. Error: </string>
    <string name="location_disabled">Location service is disabled</string>
    <string name="network_disabled">Network is off</string>
    <string name="loading_post">Loading posts&#8230;</string>
    <string name="loading_post_failed">Failed to load post list </string>
    <string name="location_not_detected">Location is not detected</string>
    <string name="inappr_label">inappropriate</string>

    <string name="text_no_post_items">No posts to read</string>

    <!-- Home screen -->
    <string name="no_clack_in_the_area_msg">There are no Clacks in the area</string>
    <string name="post_list_updated">Post list has been updated</string>
    <string name="delete_post">Your post has been deleted</string>
    <string name="delete_post_failed">Deletion failed</string>
    <string name="clack_auto_deleted_low_rating">The post will be deleted because it\'s counter hit -3</string>
    <string name="clacks_updating">Clacks list updating started</string>
    <string name="clack_error_voting">Error occurred while voting</string>

    <string name="post">Post</string>

    <!-- error messages -->
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_blank_current_password">enter your current password</string>
    <string name="error_blank_email">enter a email</string>
    <string name="error_blank_mobile">enter a mobile number</string>
    <string name="error_email_format">enter correct email format</string>
    <string name="error_mobile_format">enter correct mobile number format</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="error_current_password">Please enter correct current password or recover your password</string>

    <string name="label_send">Send</string>
    <string name="label_error_incorrect_phone">Incorrect phone</string>

    <string name="text_not_entered">Text is not entered</string>
    <string name="posting_clack">Posting clack&#8230;</string>
    <string name="posting_clack_error">Error occurred posting a clack</string>


    <string name="limit">Limit</string>
    <string name="limit_exceeded">characters exceeded</string>

</resources>
