<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        fontPath="fonts/Roboto-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_lock"
        android:textSize="@dimen/_16sdp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:ignore="MissingPrefix" />

    <TextView
        fontPath="fonts/Roboto-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enable_message"
        android:textSize="@dimen/_14sdp"
        android:textColor="@android:color/black"
        tools:ignore="MissingPrefix" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/no"
            android:visibility="invisible"
            android:textSize="@dimen/_14sdp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/ok"
            android:textSize="@dimen/_14sdp"
            android:textColor="@android:color/holo_blue_light" />

    </LinearLayout>

</LinearLayout>