<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <EditText
            android:id="@+id/signUpEmail"
            fontPath="fonts/Roboto-Thin.ttf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:theme="@style/EditTextStyle"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/signUpUsername"
            fontPath="fonts/Roboto-Thin.ttf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:theme="@style/EditTextStyle"
            tools:ignore="MissingPrefix" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/signUpPassword"
                    fontPath="fonts/Roboto-Thin.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:theme="@style/EditTextStyle"
                    tools:ignore="MissingPrefix" />

                <EditText
                    android:id="@+id/signUpRepeatPassword"
                    fontPath="fonts/Roboto-Thin.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:theme="@style/EditTextStyle"
                    tools:ignore="MissingPrefix" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signUpStart"
            fontPath="fonts/Roboto-Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_selector"
            android:padding="9dp"
            android:text="@string/start_now"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="MissingPrefix" />

    </LinearLayout>
</ScrollView>
