<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="4">

    <android.support.v7.widget.Toolbar
        android:id="@+id/directoryToolbar"
        style="@style/Widget.SherLocked.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/police_stations"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgpolice"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/police_station" />

            <TextView
                android:id="@+id/txtPolice"
                fontPath="fonts/Roboto-Regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/imgpolice"
                android:text="@string/police_stations"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                tools:ignore="MissingPrefix" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fire_stations"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgfire"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/fire_station" />

            <TextView
                android:id="@+id/txtFire"
                fontPath="fonts/Roboto-Regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/imgfire"
                android:text="@string/fire_stations"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                tools:ignore="MissingPrefix" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/hospitals"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imghospital"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/hospital" />

            <TextView
                android:id="@+id/txtHospital"
                fontPath="fonts/Roboto-Regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/imghospital"
                android:text="@string/hospitals"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                tools:ignore="MissingPrefix" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>

